--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,7 @@
     {
       "src": "https://cdn-icons-png.flaticon.com/512/6065/6065063.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/6065/6065063.png",
